# immy

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt  config.h  doko.c  doko.h  image.c  options.c  util.c  window.c
doko/: Makefile  config.h  doko.c  doko.h  main.c  ui.c  ui.h
raylib/raylib-5.0/: README.md
raylib/raylib-5.0/src/: config.h  rtextures.c
resources/: doko.desktop  immy.desktop
resources/fonts/: README.md
scripts/: README.md  screen_zoom.sh
src/: Makefile  bundler.c  config.h  darray.h  doko.c  doko.h  doko_async.c  implementations.c  input.c  input.h  keybind.c  keybind.h  main.c  resources.c  resources.h  shaders.h  ui.c  ui.h
src/core/: clipboard.c  core.c  core.h  ffmpeg.c  image.c  image_async.c  imagemagick.c  imlib.c  str.c  tostring.c  win32.c
src/doko/: clipboard.c  doko.c  doko.h  doko_async.c  ffmpeg.c  image.c  imagemagick.c  imlib.c  str.c  tostring.c
src/immy/: config.h  darray.h  input.c  input.h  main.c  resources.h
src/immy/core/: clipboard.c  core.h  ffmpeg.c  image.c  image_async.c  imagemagick.c  unix.c  x11.c
src/immy/ui/: ui.c  ui.h
src/immy/ui/screen/: image.c  thumbs.c
src/imylib2/: .gitignore  CMakeLists.txt  Makefile  README.md  imylib2.c  imylib2.h
src/imylib2/arpa/: inet.h
src/imylib2/cmake/: BuildStatic.cmake
src/imylib2/imlib2/: Imlib2_Loader.h
src/imylib2/imlib2/loaders/: config.h  exif.c  exif.h  loader_argb.c  loader_bmp.c  loader_bz2.c  loader_ff.c  loader_gif.c  loader_heif.c  loader_ico.c  loader_j2k.c  loader_jpeg.c  loader_jxl.c  loader_lbm.c  loader_png.c  loader_pnm.c  loader_qoi.c  loader_tga.c  loader_tiff.c  loader_webp.c  loader_xbm.c  loader_xpm.c
src/imylib2/loaders/: loader_ani.c  loader_argb.c  loader_bmp.c  loader_bz2.c  loader_ff.c  loader_gif.c  loader_heif.c  loader_ico.c  loader_j2k.c  loader_jpeg.c  loader_jxl.c  loader_lbm.c  loader_png.c  loader_pnm.c  loader_qoi.c  loader_tga.c  loader_tiff.c  loader_webp.c  loader_xbm.c  loader_xpm.c
src/raylib/raylib-5.0/src/: config.h  rtext.c
src/ui/: ui.c  ui.h
src/ui/screen/: files.c  image.c  keybinds.c  thumbs.c
